[gd_scene load_steps=21 format=2]

[ext_resource path="res://addons/dialogic/Dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://01_JG/DialogicExtentions/LTextBubble.gd" type="Script" id=2]
[ext_resource path="res://01_JG/ArabicText/ARichLabel.gd" type="Script" id=3]
[ext_resource path="res://01_JG/ArabicText/ALabel.gd" type="Script" id=4]
[ext_resource path="res://01_JG/DialogicExtentions/NextIndicatorButton.gd" type="Script" id=5]
[ext_resource path="res://01_JG/Localization/VisiblityByLang.gd" type="Script" id=6]
[ext_resource path="res://01_JG/ArabicText/MarkaziFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://01_JG/Art/GUI/TalkBox.png" type="Texture" id=8]
[ext_resource path="res://01_JG/Art/GUI/NameBox.png" type="Texture" id=9]
[ext_resource path="res://01_JG/Art/GUI/Transparent.png" type="Texture" id=10]
[ext_resource path="res://01_JG/ArabicText/ARichLabelAutoDir.gd" type="Script" id=11]
[ext_resource path="res://01_JG/Art/GUI/next-indicator.png" type="Texture" id=12]
[ext_resource path="res://01_JG/ArabicText/ALabelAutoDir.gd" type="Script" id=13]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 51, 51 )
modulate_color = Color( 0.156863, 0.545098, 0.478431, 1 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 51, 51 )
modulate_color = Color( 0.0196078, 0.27451, 0.286275, 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 51, 51 )
modulate_color = Color( 0.262745, 0.615686, 0.560784, 1 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 1, 1, 1, 0 )
expand_margin_left = 10.0

[sub_resource type="Animation" id=5]
resource_name = "Pulse"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Static"

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ) ]
}

[node name="DialogNode" instance=ExtResource( 1 )]

[node name="Portraits" parent="." index="0"]
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="TextBubble" parent="." index="1"]
margin_left = -300.0
margin_top = -190.0
margin_right = 300.0
margin_bottom = -40.0
script = ExtResource( 2 )
use_standard = true

[node name="TextureRect" parent="TextBubble" index="1"]
modulate = Color( 0.964706, 0.901961, 0.901961, 1 )
texture = ExtResource( 8 )

[node name="RichTextLabel" parent="TextBubble" index="2"]
custom_fonts/normal_font = ExtResource( 7 )
bbcode_text = ""
text = ""
script = ExtResource( 3 )

[node name="Label" type="Label" parent="TextBubble/RichTextLabel" index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
autowrap = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ALabelAutoDir" type="Node" parent="TextBubble/RichTextLabel/Label" index="0"]
script = ExtResource( 13 )

[node name="ARichLabelAutoDir" type="Node" parent="TextBubble/RichTextLabel" index="2"]
script = ExtResource( 11 )

[node name="NextIndicatorContainer" parent="TextBubble" index="3"]
margin_top = -6.27685
margin_bottom = 33.7232

[node name="NextIndicator" parent="TextBubble/NextIndicatorContainer" index="0"]
self_modulate = Color( 1, 1, 1, 1 )
margin_left = 549.0
margin_top = 104.0
margin_right = 600.0
margin_bottom = 155.0
mouse_filter = 2
texture = ExtResource( 10 )

[node name="Button" type="Button" parent="TextBubble/NextIndicatorContainer/NextIndicator" index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -21.0
margin_bottom = -21.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
expand_icon = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisiblityByLang" type="Node2D" parent="TextBubble/NextIndicatorContainer" index="1"]
script = ExtResource( 6 )

[node name="NameLabel" parent="TextBubble" index="4"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -130.0
margin_top = -28.0
margin_right = 103.0
margin_bottom = 12.0
rect_min_size = Vector2( 233, 40 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.619608 )

[node name="ColorRect" parent="TextBubble/NameLabel" index="0"]
color = Color( 0.156863, 0.156863, 0.156863, 1 )

[node name="TextureRect" parent="TextBubble/NameLabel" index="1"]
visible = true
texture = ExtResource( 9 )

[node name="NameLabel" type="Label" parent="TextBubble/NameLabel" index="2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.980392, 0.980392, 0.980392, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.619608 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "hello"
align = 1
valign = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
text_prop = "hello"

[node name="ar_NextIndicatorContainer" type="Control" parent="TextBubble" index="6"]
margin_top = -6.27685
margin_right = 40.0
margin_bottom = 33.7232
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextIndicator" type="TextureRect" parent="TextBubble/ar_NextIndicatorContainer" index="0"]
margin_left = 16.727
margin_top = 100.0
margin_right = 67.727
margin_bottom = 151.0
texture = ExtResource( 10 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextBubble/ar_NextIndicatorContainer/NextIndicator" index="0"]
autoplay = "Up and down"
anims/Pulse = SubResource( 5 )
anims/Static = SubResource( 6 )
"anims/Up and down" = SubResource( 7 )

[node name="Button2" type="Button" parent="TextBubble/ar_NextIndicatorContainer/NextIndicator" index="1"]
margin_right = 30.0
margin_bottom = 30.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
expand_icon = true
script = ExtResource( 5 )

[node name="VisiblityByLang" type="Node2D" parent="TextBubble/ar_NextIndicatorContainer/NextIndicator" index="2"]
script = ExtResource( 6 )
visible_on_ar = true
visible_on_en = false

[editable path="TextBubble"]
